@@ -1,14 +1,13 @@
-
 body {
-     background-color: #004;
-     color: #ffffff;
+     background-color: #fff;
+     color: #000;
 }
 
 div.itemizedlist {
 }
 
 h1.title  {
-   color: #ffffff;
+   color: #000;
    border-style: ridge;
    border-color: #ffaaaa;
    font-size: 200%;   
@@ -16,11 +15,11 @@ h1.title  {
 
 h2.title  {
    border-style: solid;
-   border-color: #ff99ee;
-   background-color: #ff99ee;
-   color: #000000;
-   font-size: 120%;
+   border-color: #232;
+   color: #232;
+   font-size: 140%;
 }
+
 h3.title {
    border-style: solid;
    border-color: #ff99ee;
@@ -35,25 +34,27 @@ pre.screen {
 }
 
 a:link {
-  color: #ffccff;
+  color: #a3a;
 }
 
 a:active {
-  color: #eeeeee;
+  color: #000;
 }
 
 a:hover {
-  color: #ffffff;
-  background-color: #5555ff;
+  color: #22f;
+  background-color: #aaf;
 }
 
 a:visited {
-  color: #ddeedd;
+  color: #000;
 }
 
 tr {
-  background-color: #000;
+  background-color: #025;
+  color: #eee;
 }
 td {
-  background-color: #000;
+  background-color: #025;
+  color: #eee;
 }
