@@ -1,11 +1,12 @@
 pbuilder (0.99) UNRELEASED; urgency=low
 
-  * Documentation update: note apt-proxy is useful for caching the 
-  apt archives.
-  pbuilder create failure due to debootstrap needs to be fixed in debootstrap script side.
+  * Documentation update: 
+   - note apt-proxy is useful for caching the apt archives.
+   - pbuilder create failure due to debootstrap needs to be fixed in debootstrap script side.
   * Fix B91dpkg-i to fix typo in script to get names of packages properly.
+  * Change HTML CSS
 
- -- Junichi Uekawa <dancer@debian.org>  Sat, 10 Jan 2004 11:15:46 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Sun, 11 Jan 2004 09:34:02 +0900
 
 pbuilder (0.98) unstable; urgency=low
 
