@@ -1,3 +1,7 @@
+2004-01-11  Junichi Uekawa  <dancer@debian.org>
+
+	* Documentation/pbuilder-doc.css: Change css so that it's black on white, not white on black.
+
 2004-01-10  Junichi Uekawa  <dancer@debian.org>
 
 	* examples/B91dpkg-i: fix typo to properly obtain the list of packages
